@@ -1,17 +1,16 @@
 package ar.vicria.subte.microservice.services.basic;
 
-import ar.vicria.subte.microservice.entities.BaseEntity;
 import ar.vicria.subte.dto.basic.BaseDto;
+import ar.vicria.subte.microservice.entities.BaseEntity;
 import ar.vicria.subte.microservice.mappers.basic.BaseMapper;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.persistence.EntityNotFoundException;
 import java.io.Serializable;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -95,7 +94,7 @@ public abstract class BaseMappedService<E extends BaseEntity,
     public List<D> getAllAsDto() {
         return StreamSupport.stream(getAll().spliterator(), false)
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
